[gd_scene load_steps=5 format=2]

[ext_resource path="res://classes/CommandComputerClass/scripts/command_computer_class.gd" type="Script" id=1]
[ext_resource path="res://classes/state_machine/scripts/state_machine.gd" type="Script" id=2]
[ext_resource path="res://classes/CommandComputerClass/scripts/unoccupied.gd" type="Script" id=3]
[ext_resource path="res://classes/CommandComputerClass/scripts/occupied.gd" type="Script" id=4]

[node name="CommandComputerClass" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "This is the base class for all command cmputers of all ships

Upon Toggling this computer, a certain entity can finally control the ship

This will send signals to the ship it is designated
"
}

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionArea"]

[node name="Sprite" type="Sprite" parent="."]

[node name="Position2D" type="Position2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Unoccupied")

[node name="Unoccupied" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Occupied" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
